# RabbitMQ-POC

./: .env.example  Cargo.toml  README.md
src/: consumer.rs  main.rs  producer.rs
